# cosmic_ext_bg_theme

./: .gitignore  Cargo.toml  Makefile  README.md  cosmic-bg-theme.service  cosmic-ext-bg-theme.service
debian/: changelog  control  copyright  rules
res/: cosmic.ext.BgTheme.desktop
src/: main.rs
