[package]
name = "cosmic_ext_bg_theme"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cosmic-ext-bg-theme"
path = "src/main.rs"

[dependencies]
fast_image_resize = { version = "5.3.0", features = ["image"] }
tracing-subscriber = { version = "0.3.20", features = [
    "fmt",
    "env-filter",
    "ansi",
] }
tracing = "0.1.41"
tokio = { version = "1.47", features = ["full"] }
anyhow = "1"
futures = "0.3"
rand = "0.9"
image = "0.25"
zbus = { version = "5", default-features = false, features = ["tokio"] }
cosmic-bg-config = { git = "https://github.com/pop-os/cosmic-bg" }
cosmic-config = { git = "https://github.com/pop-os/libcosmic" }
cosmic-theme = { git = "https://github.com/pop-os/libcosmic" }
cosmic-settings-daemon = { git = "https://github.com/pop-os/dbus-settings-bindings" }
kmeans_colors = { version = "0.7", features = ["palette_color"] }
log-panics = { version = "2.1", features = ["with-backtrace"] }
palette = { version = "0.7.6", features = ["serializing"] }
serde = { version = "1.0", features = ["derive"] }
tracing-journald = "0.3.1"
